Makefile: add -Werror
Force us to code better!

Signed-off-by: Andrew Donnellan <andrew.donnellan@au1.ibm.com>

--- a/Makefile.vars
+++ b/Makefile.vars
@@ -4,8 +4,9 @@ MAKEFLAGS += -rR
 AS	= $(CROSS_COMPILE)as
 LD	= $(CROSS_COMPILE)ld
 CC	= $(CROSS_COMPILE)gcc
+CFLAGS	+= -g -Wall -Werror -O2 -I$(CURDIR)
 ifeq ($(BIT32),y)
-CFLAGS += -g -Wall -O2 -m32 -I$(CURDIR)
+CFLAGS += -m32
 else
-CFLAGS += -g -Wall -O2 -m64 -I$(CURDIR)
+CFLAGS += -m64
 endif
